third-src/c-log/test/session.error
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:19 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
WARN: 06-29 18:37:20 [thread_test.c:43][test01] You got something wrong here [value:3]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:20 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
ERROR: 06-29 18:37:21 [thread_test.c:45][test01] You got something wrong here [value:4]
